[package]
name = "pkroam-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["ssnover <ssnover95@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[lib]
name = "pkroam_tauri_lib"
path = "src/lib.rs"

[[bin]]
name = "pkroam_tauri_app"
path = "src/bin/main.rs"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
clap = { version = "4.3", features = ["derive"] }
directories = "5.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
pkroam = { path = "../../pkroam/pkroam_lib" }
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0"
tauri = { version = "1.4.0", features = [] }
ts-rs = "7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
